--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   </head>
   <body data-theme="light">
     <a
-      href="https://github.com/Dorota1997/react-frontend-dev-portfolio"
+      href="https://github.com/dcinshire"
       target="_blank"
       class="github-corner"
       aria-label="View source on GitHub"
